kubernetes/dev/dev-idapt-backend-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: idapt-backend
spec:
  serviceName: idapt-backend
  replicas: 3
  selector:
    matchLabels:
      app-name: idapt-backend
  template:
    metadata:
      labels:
        app-name: idapt-backend
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app-name
                  operator: In
                  values:
                  - idapt-backend
              topologyKey: kubernetes.io/hostname
      containers:
        - name: idapt-backend
          image: idapt-idapt-backend # For build with docker compose
          imagePullPolicy: Never
          ports:
            - containerPort: 9004
          livenessProbe:
            httpGet:
              #httpHeaders:
              #  - name: Host
              #    value: localhost
              #insecureSkipVerify: true  # Bypass cert validation for self-signed dev cert
              path: /api/health
              port: 9004
              scheme: HTTPS
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
      restartPolicy: Always
      volumes: [] # User data volumes will be mounted by the pod itself
