kubernetes/dev/dev-idapt-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: idapt-backend
spec:
  type: ClusterIP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 3600
  ports:
    - name: idapt-backend
      protocol: TCP
      port: 9004
      targetPort: 9004
  selector:
    app-name: idapt-backend
